--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ disqus_shortname: jimmygc
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://jimmygc.github.com
+url: http://jimmygc.github.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
